# Orbital

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  conaninfo.txt  graph_info.json
ArtPsdFiles/: MainMenu_Mock.psb  Pause.psb  PauseMenu.psb  UI_back.psb  asteroidTexture.psd  docking.psd  main gameplay.psd  objective.psd
Debug/: Momentus.ilk  ProjectOrbital.ilk
ProjectOrbital/: Asteroid.cpp  Asteroid.h  Background.cpp  Background.h  Btn.cpp  CollectorBeam.cpp  CollectorBeam.h  CompletionScreen.cpp  CompletionScreen.h  Cursor.cpp  GameObject.h  GameOverScreen.cpp  GameOverScreen.h  GameScreen.cpp  GameScreen.h  GameScreenHud.cpp  GameScreenHud.h  GameScreenMenu.cpp  GameScreenMenu.h  GameWorld.cpp  GameWorld.h  Harpoon.cpp  Harpoon.h  HelpScreen.cpp  HelpScreen.h  IScreen.h  MainMenuBackground.cpp  MainMenuBackground.h  Mine.cpp  Mine.h  Mission.cpp  Mission.h  MusicManager.cpp  MusicManager.h  Notification.cpp  Notification.h  OptionsMenu.cpp  OptionsMenu.h  OrbitalMain.cpp  OrbitsContactListener.h  (+17 more)
ProjectOrbital/Debug/: CL.read.1.tlog  (+14 more)
Source/: CMakeLists.txt  OrbitalMain.cpp
Source/Game/: Background.cpp  Background.h  CollectorBeam.cpp  CollectorBeam.h  GameWorld.cpp  GameWorld.h  Mission.cpp  MusicManager.cpp  MusicManager.h  OrbitsContactListener.cpp  OrbitsContactListener.h  ParticleManager.cpp  ParticleManager.h  PhysicsManager.cpp  PhysicsManager.h  Planet.cpp  Planet.h  PlayerShip.cpp  PlayerShip.h  Settings.h  SoundManager.h  TextureManager.cpp  TextureManager.h
Source/Game/Entities/: Asteroid.cpp  Asteroid.h  GameObject.h  Harpoon.cpp  Harpoon.h  Mine.cpp  Mine.h
Source/Gui/: ScreenManager.cpp  ScreenManager.h
Source/Gui/Elements/: Btn.cpp  Btn.h  Cursor.cpp  Cursor.h  Notification.cpp  OrbitalCursor.cpp  OrbitalCursor.h  Slider.cpp
Source/Gui/Screens/: CompletionScreen.cpp  CompletionScreen.h  GameOverScreen.cpp  GameOverScreen.h  GameScreen.cpp  GameScreen.h  GameScreenHud.cpp  GameScreenHud.h  GameScreenMenu.cpp  GameScreenMenu.h  HelpScreen.cpp  HelpScreen.h  MainMenuBackground.cpp  MainMenuBackground.h  OptionsMenu.cpp  OptionsMenu.h  StartScreen.cpp  StartScreen.h
Source/Gui/screens/: GameOverScreen.h
Source/Utility/: OrbitsMath.h
(+11 files in other folders)
